<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">A-Barobot</string>
    <string name="debug_window">Opcje serwisowe</string>
    <string name="debug_mode_window">Tryb serwisowy</string>
    <string name="do_update">Pobierz aktualizacje drinków</string>

    <!-- BluetoothChat -->
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!-- DeviceListActivity -->
    <string name="scanning">Szukanie urządzeń</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Szukanie urządzeń w pobliżu</string>
    <string name="tvText">0</string>
    <string name="menu_settings">Ustawienia</string>
    <string name="back_to_main_feature">Pij drinki z Barobotem</string>
    <string name="secure_connect">Połącz z Barobotem</string>
    <string name="title_activity_update">Update</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="about_info">Autorzy</string>
    <string name="title_activity_about">O programie</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="processing_window_title">Analiza wejścia</string>
    <string name="live_analog0">0</string>
    <string name="live_analog1">Szklanka</string>
    <string name="live_analog2">2</string>
    <string name="live_analog3">3</string>
    <string name="live_analog4">Hall</string>
    <string name="live_analog5">5</string>
    <string name="live_analog6">6</string>
    <string name="live_analog7">7</string>
    <string name="live_analog8">8</string>
    <string name="live_analog9">9</string>
    <string name="live_analog10">10</string>
    <string name="live_analog11">11</string>
    <string name="live_analog12">12</string>
    <string name="live_analog13">13</string>
    <string name="live_analog14">14</string>
    <string name="live_analog15">15</string>
    <string name="live_analog20">Ultra góra</string>
    <string name="live_analog21">Ultra bok</string>
    <string name="select_repeat">Powtórzeń</string>
    <string name="select_timeout">Częstotliwość</string>
    <string name="web_machaj_y">Machaj Y</string>
    <string name="web_machaj_x">Machaj X</string>
    <string name="title_activity_device_list">Tryb serwisowy</string>
    <string name="title_section1">Rozkazy</string>
    <string name="title_section2">Urządzenia</string>
    <string name="title_section3">Oświetlenie</string>
    <string name="title_section4">Butelki</string>
    <string name="title_section5">Analiza wejścia</string>
    <string name="title_section6">Historia</string>

    <!-- GUI -->
    <string name="action_main">Make a drink</string>
    <string name="action_bottle_setup">Setup bottles</string>
    <string name="action_recipe_setup">Customize Recipes</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="make_button">Make a drink</string>
    <string name="empty_slot">Empty</string>
    <string name="liquid_select_title">Select liquid</string>
    <string name="liquid_name">Liquid Name (Brand)</string>
    <string name="liquid_type">Liquid Type</string>
    <string name="title_activity_barobot_main">Barobot Main</string>
    <string name="title_activity_bottle_setup">Bottle Setup</string>
    <string name="title_activity_recipe_setup">Recipe Setup</string>
    
    <!-- Panic -->
    <string name="action_panic">STHAP!!!</string>
    <string name="panic_title">STHAP!!!</string>
    <string name="panic_message">Barobot! What are you doing?! Barobot! STHAP!!!</string>
    <string name="panic_button_ok">STHAP IT!</string>
    <string name="panic_button_cancel">Go on, oh you!</string>
    
    <!-- Main -->
    <string name="glass_reminder_title">Reminder</string>
    <string name="glass_reminder_message">Place glass into the tray</string>
    <string name="glass_reminder_button_ok">OK</string>
    <string name="glass_reminder_button_cancel">Cancel</string>
    
    <string name="pour_finished_title">Pouring finished</string>
    <string name="pour_finished_message">Take your tasty drink from the tray.</string>
    <string name="pour_finished_button">OK</string>

    <!-- Bottle Setup -->
    <string name="empty_bottle_string">Empty</string>

    <!-- Recipe Setup -->
    <string name="add_recipe">Add new recipe</string>
    <string name="remove_recipe">Remove recipe</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="remove_ingredients">Remove all ingredients</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="recipe_description">Recipe Description</string>
    <string name="title_activity_outside_component">Outside Components</string>

</resources>
