<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item 
        android:id="@+id/action_panic"
        android:title="@string/action_panic"
        android:showAsAction="always"
        
        />
    <item android:id="@+id/main_feature"
          android:title="@string/action_main"
          android:showAsAction="always" />
    
    <item android:id="@+id/action_creator"
          android:title="@string/action_creator"
          android:showAsAction="always" />
    <item
        android:id="@+id/action_bottles"
        android:title="@string/action_bottle_setup" 
        android:showAsAction="ifRoom" />
    <item 
        android:id="@+id/action_outside_components"
        android:title="@string/title_activity_outside_component"
        android:showAsAction="ifRoom"/>
    
   <item android:id="@+id/kalibracja"
          android:title="Kalibracja"
          android:showAsAction="ifRoom" />
   
   
    <item android:id="@+id/unlock_menu"
          android:title="Unlock"
          android:showAsAction="ifRoom" />
   
    <item
        android:id="@+id/action_recipes"
        android:title="@string/action_recipe_setup" 
        android:showAsAction="ifRoom" />

    	<item android:id="@+id/secure_connect_scan"
          android:icon="@android:drawable/ic_menu_search"
          android:title="@string/secure_connect" />

		<item android:id="@+id/update_drinks" android:checked="true" android:visible="true" 
		    android:titleCondensed="@string/do_update" 
		    android:enabled="true" android:checkable="false" 
		    android:title="@string/do_update"  
		    android:icon="@android:drawable/ic_menu_rotate"/>
		
   		
  
  		<item android:id="@+id/menu_debug_window"
          android:title="@string/debug_mode_window"  
          android:icon="@android:drawable/ic_menu_preferences" />
  
   		
		<item android:id="@+id/menu_settings"
        android:showAsAction="never"
        android:title="@string/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"/>

        <item android:id="@+id/about_item" android:checked="true" android:visible="true" android:titleCondensed="Informacje" android:enabled="true" android:checkable="false" android:title="Informacje"  android:icon="@android:drawable/ic_menu_info_details"></item>
</menu>
